--- a/Terra Planet/Info.plist
+++ b/Terra Planet/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSFaceIDUsageDescription</key>
+	<string>Terra Planer use Face ID to protect your account</string>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
 	<key>UILaunchStoryboardName</key>
