--- a/Terra Planet/Info.plist
+++ b/Terra Planet/Info.plist
@@ -1,12 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
-<dict>
-	<key>NSFaceIDUsageDescription</key>
-	<string>Terra Planer use Face ID to protect your account</string>
-	<key>UIMainStoryboardFile</key>
-	<string>Main</string>
-	<key>UILaunchStoryboardName</key>
-	<string>LaunchScreen</string>
-</dict>
+<dict/>
 </plist>
