Run NodeJS in background

--- a/Terra Planet/Info.plist
+++ b/Terra Planet/Info.plist
@@ -34,5 +34,9 @@
 			</dict>
 		</dict>
 	</dict>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>processing</string>
+	</array>
 </dict>
 </plist>
