remove background processing checkbox

--- a/Terra Planet/Info.plist
+++ b/Terra Planet/Info.plist
@@ -35,8 +35,6 @@
 		</dict>
 	</dict>
 	<key>UIBackgroundModes</key>
-	<array>
-		<string>processing</string>
-	</array>
+	<array/>
 </dict>
 </plist>
